@@ -41,13 +41,11 @@ available <a href="http://bent.latency.net/bent/i386/and-httpd-0.99.7.cpio.bz2">
 </li>
 
 <li>
- An upto date <a href="http://www.phy.duke.edu/~rgb/General/yum_article/yum_article/yum_article.html">YUM</a> repository is available (containing only the non debug versions of the rpms)...<br>
-<pre>
-[and-org-james]
-name=And.org James' packages
-baseurl=ftp://ftp.and.org/yum/fc$releasever-james
-</pre>
-...at which point you can just "yum install and-httpd".
+ An upto date
+ <a href="http://www.phy.duke.edu/~rgb/General/yum_article/yum_article/yum_article.html">YUM</a>
+ repository is available (containing only the non debug versions of the rpms)
+ <a href="http://www.and.org/texts/yum">here</a> at which point you can just
+"yum install and-httpd".
 	    </li>
 
             <li>If you want to look at the <b><a href="http://www.gnu.org/software/gnu-arch">arch</a> repository</b> that
@@ -332,7 +330,7 @@ probes database.</p>
     <address><a href="mailto:james-web@and.org">James Antill</a></address>
 <!-- Created: Mon Jan 17 18:09:46 EST 2005 -->
 <!-- hhmts start -->
-Last modified: Fri Jun  2 01:37:42 EDT 2006
+Last modified: Fri Jun  2 02:02:03 EDT 2006
 <!-- hhmts end -->
   </body>
 </html>
